<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.login.ui.LoginActivity">

    <ScrollView
        android:id="@+id/scv_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/bt_login">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/img_logo"
                android:layout_width="250dp"
                android:layout_height="150dp"
                android:src="@drawable/everis_logo"
                android:layout_marginTop="15dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View android:id="@+id/img_divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_logo" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@android:color/black"
                android:text="@string/password"
                android:textAllCaps="true"
                android:textSize="24sp"
                android:layout_marginTop="25dp"
                android:layout_marginStart="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/et_password"
                app:layout_constraintTop_toBottomOf="@id/img_divider" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:maxLength="6"
                android:background="@null"
                android:inputType="none"
                android:textIsSelectable="true"
                android:textSize="32sp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintBottom_toBottomOf="@id/tv_password"
                app:layout_constraintLeft_toRightOf="@id/tv_password"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/tv_password"
                tools:text="123456" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_keyboard"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_keyboard_card"
                android:layout_marginTop="50dp"
                android:elevation="5dp"
                android:padding="15dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                app:layout_constraintTop_toBottomOf="@id/et_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_0_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_0_or_1"
                    android:background="@drawable/rounded_dark_orange_button"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/btn_2_3"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_2_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_2_or_3"
                    android:background="@drawable/rounded_dark_orange_button"
                    app:layout_constraintLeft_toRightOf="@id/btn_0_1"
                    app:layout_constraintRight_toLeftOf="@id/btn_4_5"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_4_5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_4_or_5"
                    android:background="@drawable/rounded_dark_orange_button"
                    app:layout_constraintLeft_toRightOf="@id/btn_2_3"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_6_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_6_or_7"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/rounded_dark_orange_button"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/btn_8_9"
                    app:layout_constraintTop_toBottomOf="@id/btn_2_3" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_8_9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_8_or_9"
                    android:background="@drawable/rounded_dark_orange_button"
                    app:layout_constraintLeft_toRightOf="@id/btn_6_7"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="@id/btn_6_7" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/login"
        android:background="@drawable/rounded_dark_green_button"
        android:textColor="@android:color/white"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_loading_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loading_background"
        android:translationZ="99dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ProgressBar
        android:id="@+id/pg_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:translationZ="99dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/gp_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:visibility="gone"
        app:constraint_referenced_ids="cl_loading_background, pg_loading" />

</androidx.constraintlayout.widget.ConstraintLayout>